Completed basic logging.

--- a/HaE Racing Analytics/HaE Racing Analytics.csproj
+++ b/HaE Racing Analytics/HaE Racing Analytics.csproj
@@ -96,6 +96,8 @@
     <Analyzer Include="C:\Users\SirHa\AppData\Local\Microsoft\VisualStudio\15.0_d85c6838\Extensions\5cocn4ad.3cr\Analyzers\MDKAnalyzer.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Datapoint.cs" />
+    <Compile Include="LapData.cs" />
     <Compile Include="MDK\Bootstrapper.cs" />
     <AdditionalFiles Include="MDK\MDK.options">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -105,6 +107,9 @@
     <AdditionalFiles Include="thumb.png" />
     <AdditionalFiles Include="MDK\whitelist.cache" />
   </ItemGroup>
+  <Import Project="..\..\..\..\MDK_Projects\Shared Projects\HaE Serialization\HaE Serialization.projitems" Label="Shared" />
+  <Import Project="..\..\..\..\MDK_Projects\Shared Projects\HaE Visualization\HaE Visualization.projitems" Label="Shared" />
+  <Import Project="..\..\..\..\MDK_Projects\Shared Projects\HaE Timing\HaE Timing.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <Copy SourceFiles="mdk\mdk.options" DestinationFolder="$(TargetDir)\mdk" />
