--- a/HaE Racing Analytics/HaE Racing Analytics.csproj
+++ b/HaE Racing Analytics/HaE Racing Analytics.csproj
@@ -110,6 +110,7 @@
   <Import Project="..\..\..\..\MDK_Projects\Shared Projects\HaE Serialization\HaE Serialization.projitems" Label="Shared" />
   <Import Project="..\..\..\..\MDK_Projects\Shared Projects\HaE Visualization\HaE Visualization.projitems" Label="Shared" />
   <Import Project="..\..\..\..\MDK_Projects\Shared Projects\HaE Timing\HaE Timing.projitems" Label="Shared" />
+  <Import Project="..\..\..\..\MDK_Projects\Shared Projects\HaE DebugUtils\HaE DebugUtils.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <Copy SourceFiles="mdk\mdk.options" DestinationFolder="$(TargetDir)\mdk" />
