--- a/HaE Racing Analytics/HaE Racing Analytics.csproj
+++ b/HaE Racing Analytics/HaE Racing Analytics.csproj
@@ -90,10 +90,10 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="MDKUtilities">
-      <HintPath>C:\Users\SirHa\AppData\Local\Microsoft\VisualStudio\15.0_d85c6838\Extensions\5cocn4ad.3cr\MDKUtilities.dll</HintPath>
+      <HintPath>c:\users\sirha\appdata\local\microsoft\visualstudio\15.0_d85c6838\extensions\d5vuiqph.fq5\MDKUtilities.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Analyzer Include="C:\Users\SirHa\AppData\Local\Microsoft\VisualStudio\15.0_d85c6838\Extensions\5cocn4ad.3cr\Analyzers\MDKAnalyzer.dll" />
+    <Analyzer Include="c:\users\sirha\appdata\local\microsoft\visualstudio\15.0_d85c6838\extensions\d5vuiqph.fq5\Analyzers\MDKAnalyzer.dll" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datapoint.cs" />
